--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"@testing-library/user-event": "^7.1.2",
 		"animated-number-react": "^0.1.1",
 		"bootstrap": "^4.5.0",
+		"clsx": "^1.1.1",
 		"firebase": "^7.15.0",
 		"jquery": "^3.5.1",
 		"lodash": "^4.17.15",
@@ -25,6 +26,7 @@
 		"redux-devtools-extension": "^2.13.8",
 		"redux-firestore": "^0.13.0",
 		"redux-persist": "^6.0.0",
+		"styled-components": "^5.1.1",
 		"validate.js": "^0.13.1"
 	},
 	"scripts": {
