--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"redux-firestore": "^0.13.0",
 		"redux-persist": "^6.0.0",
 		"styled-components": "^5.1.1",
+		"typed.js": "^2.0.11",
 		"validate.js": "^0.13.1"
 	},
 	"scripts": {
