--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
 		"animated-number-react": "^0.1.1",
+		"axios": "^0.19.2",
 		"bootstrap": "^4.5.0",
 		"clsx": "^1.1.1",
 		"firebase": "^7.15.0",
 		"jquery": "^3.5.1",
 		"lodash": "^4.17.15",
-		"nodemailer": "^6.4.8",
 		"popper.js": "^1.16.1",
 		"react": "^16.13.1",
 		"react-dom": "^16.13.1",
