changed to react-tree-timeline

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"@testing-library/react": "^9.3.2",
 		"@testing-library/user-event": "^7.1.2",
 		"animated-number-react": "^0.1.1",
+		"aos": "^3.0.0-beta.6",
 		"axios": "^0.19.2",
 		"bootstrap": "^4.5.0",
 		"clsx": "^1.1.1",
@@ -21,6 +22,7 @@
 		"react-scripts": "3.4.1",
 		"react-spinners": "^0.8.3",
 		"react-toast-notifications": "^2.4.0",
+		"react-tree-timeline": "^1.0.2",
 		"react-waypoint": "^9.0.2",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
