--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "dieudonnenazzah",
+	"homepage": "http://ddnazzah.github.io/ddnazzah.github.io",
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
@@ -39,10 +40,12 @@
 		"eject": "react-scripts eject",
 		"deploy-functions": "yarn run package-functions && firebase deploy --only functions",
 		"deploy-all": "yarn run package-functions && yarn build && firebase deploy",
-		"deploy": "yarn build && firebase deploy",
+		"deploy-firebase": "yarn build && firebase deploy",
 		"prepackage-functions": "rimraf functions",
 		"package-functions": "babel functionsES6 --out-dir functions --presets=es2015 --copy-files --ignore node_modules",
-		"postpackage-functions": "cd functions && yarn"
+		"postpackage-functions": "cd functions && yarn",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d build"
 	},
 	"eslintConfig": {
 		"extends": "react-app"
@@ -62,6 +65,7 @@
 	"devDependencies": {
 		"babel-cli": "^6.26.0",
 		"babel-preset-es2015": "^6.24.1",
+		"gh-pages": "^3.2.3",
 		"rimraf": "^3.0.2"
 	}
 }
